--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <a href="#order" class="btn">order now</a>
 </div>
 <div class="image">
-    <img src="images/home-img.png" alt="">
+    <img src="home-img.png" alt="">
 </div>
 
 
