--- a/index.html
+++ b/index.html
@@ -62,49 +62,49 @@
 
     <div class="box-container">
         <div class="box">
-            <img class="image" src="images/s-img-1.jpg" alt="">
+            <img class="image" src="s-img-1.jpg" alt="">
             <div class="content">
-                <img src="images/s-1.png" alt="">
+                <img src="s-1.png" alt="">
                 <h3>tasty burger(11)</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
             </div>
         </div>
         <div class="box">
-            <img class="image" src="images/s-img-2.jpg" alt="">
+            <img class="image" src="s-img-2.jpg" alt="">
             <div class="content">
-                <img src="images/s-2.png" alt="">
+                <img src="s-2.png" alt="">
                 <h3>tasty pizza(21)</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
             </div>
         </div>
         <div class="box">
-            <img class="image" src="images/s-img-3.jpg" alt="">
+            <img class="image" src="s-img-3.jpg" alt="">
             <div class="content">
-                <img src="images/s-3.png" alt="">
+                <img src="s-3.png" alt="">
                 <h3>cold ice-cream(31)</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
             </div>
         </div>
         <div class="box">
-            <img class="image" src="images/s-img-4.jpg" alt="">
+            <img class="image" src="s-img-4.jpg" alt="">
             <div class="content">
-                <img src="images/s-4.png" alt="">
+                <img src="s-4.png" alt="">
                 <h3>cold drinks(41)</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
             </div>
         </div>
         <div class="box">
-            <img class="image" src="images/s-img-5.jpg" alt="">
+            <img class="image" src="s-img-5.jpg" alt="">
             <div class="content">
-                <img src="images/s-5.png" alt="">
+                <img src="s-5.png" alt="">
                 <h3>tasty sweets(51)</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
             </div>
         </div>
         <div class="box">
-            <img class="image" src="images/s-img-6.jpg" alt="">
+            <img class="image" src="s-img-6.jpg" alt="">
             <div class="content">
-                <img src="images/s-6.png" alt="">
+                <img src="s-6.png" alt="">
                 <h3>healty breakfast(61)</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda inventore neque amet ipsa tenetur voluptates aperiam tempore libero labore aut.</p>
             </div>
@@ -126,7 +126,7 @@
 
         <div class="box">
             <span class="price"> $5 - $20 </span>
-            <img src="images/p-1.jpg" alt="">
+            <img src="p-1.jpg" alt="">
             <h3>tasty burger(11)</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -139,7 +139,7 @@
         </div>
         <div class="box">
             <span class="price"> $5 - $20 </span>
-            <img src="images/p-2.jpg" alt="">
+            <img src="p-2.jpg" alt="">
             <h3>tasty cakes(71)</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -152,7 +152,7 @@
         </div>
         <div class="box">
             <span class="price"> $5 - $20 </span>
-            <img src="images/p-3.jpg" alt="">
+            <img src="p-3.jpg" alt="">
             <h3>tasty sweets(51)</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -165,7 +165,7 @@
         </div>
         <div class="box">
             <span class="price"> $5 - $20 </span>
-            <img src="images/p-4.jpg" alt="">
+            <img src="p-4.jpg" alt="">
             <h3>tasty cupcakes(81)</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -178,7 +178,7 @@
         </div>
         <div class="box">
             <span class="price"> $5 - $20 </span>
-            <img src="images/p-5.jpg" alt="">
+            <img src="p-5.jpg" alt="">
             <h3>cold drinks(41)</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -191,7 +191,7 @@
         </div>
         <div class="box">
             <span class="price"> $5 - $20 </span>
-            <img src="images/p-6.jpg" alt="">
+            <img src="p-6.jpg" alt="">
             <h3>cold ice-cream(31)</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -217,19 +217,19 @@
     <section class="steps">
 
         <div class="box">
-            <img src="images/step-1.jpg" alt="">
+            <img src="step-1.jpg" alt="">
             <h3>choose your favorite food</h3>
         </div>
         <div class="box">
-            <img src="images/step-2.jpg" alt="">
+            <img src="step-2.jpg" alt="">
             <h3>free and fast delivery</h3>
         </div>
         <div class="box">
-            <img src="images/step-3.jpg" alt="">
+            <img src="step-3.jpg" alt="">
             <h3>easy payments methods</h3>
         </div>
         <div class="box">
-            <img src="images/step-4.jpg" alt="">
+            <img src="step-4.jpg" alt="">
             <h3>and finally, enjoy your food</h3>
         </div>
     
@@ -247,7 +247,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/g-1.jpg" alt="">
+            <img src="g-1.jpg" alt="">
             <div class="content">
                 <h3>tasty food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
@@ -255,7 +255,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-2.jpg" alt="">
+            <img src="g-2.jpg" alt="">
             <div class="content">
                 <h3>tasty food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
@@ -263,7 +263,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-3.jpg" alt="">
+            <img src="g-3.jpg" alt="">
             <div class="content">
                 <h3>tasty food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
@@ -271,7 +271,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-4.jpg" alt="">
+            <img src="g-4.jpg" alt="">
             <div class="content">
                 <h3>tasty food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
@@ -279,7 +279,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-5.jpg" alt="">
+            <img src="g-5.jpg" alt="">
             <div class="content">
                 <h3>tasty food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
@@ -287,7 +287,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-6.jpg" alt="">
+            <img src="g-6.jpg" alt="">
             <div class="content">
                 <h3>tasty food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
@@ -295,7 +295,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-7.jpg" alt="">
+            <img src="g-7.jpg" alt="">
             <div class="content">
                 <h3>tasty food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
@@ -303,7 +303,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-8.jpg" alt="">
+            <img src="g-8.jpg" alt="">
             <div class="content">
                 <h3>tasty food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
@@ -311,7 +311,7 @@
             </div>
         </div>
         <div class="box">
-            <img src="images/g-9.jpg" alt="">
+            <img src="g-9.jpg" alt="">
             <div class="content">
                 <h3>tasty food</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, ipsum.</p>
@@ -333,7 +333,7 @@
     <div class="box-container">
 
         <div class="box">
-            <img src="images/pic1.png" alt="">
+            <img src="pic1.png" alt="">
             <h3>Aarohi</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -345,7 +345,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus, ducimus facere quod ratione vel laboriosam? Est, maxime rem. Itaque.</p>
         </div>
         <div class="box">
-            <img src="images/pic2.png" alt="">
+            <img src="pic2.png" alt="">
             <h3>Dev</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -357,7 +357,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti delectus, ducimus facere quod ratione vel laboriosam? Est, maxime rem. Itaque.</p>
         </div>
         <div class="box">
-            <img src="images/pic3.png" alt="">
+            <img src="pic3.png" alt="">
             <h3>Avani</h3>
             <div class="stars">
                 <i class="fas fa-star"></i>
@@ -384,7 +384,7 @@
     <div class="row">
         
         <div class="image">
-            <img src="images/order-img.jpg" alt="">
+            <img src="order-img.jpg" alt="">
         </div>
 
         <form action="">
